# storelib_rs

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml  publish-crates.yml  publish-npm.yml
data/: iso-639-1.csv  ms-store-locales.csv
include/: storelib_rs.h
src/: cancellation.rs  error.rs  ffi.rs  lib.rs  main.rs  wasm.rs
src/models/: addon.rs  catalog.rs  enums.rs  fe3.rs  iso_codes.rs  locale.rs  mod.rs  search.rs
src/services/: display_catalog.rs  fe3.rs  mod.rs
src/utilities/: helpers.rs  mod.rs  sleep.rs
src/xml/: fe3_file_url.xml  get_cookie.xml  wuid_request.xml
tests/: display_catalog.rs
tools/: assemble-pkg.mjs  gen-locales.mjs  gen-ts.mjs  pack-npm.ps1  pack-npm.sh
