[package]
name = "storelib_rs"
version = "0.1.3"
edition = "2021"
description = "Rust port of StoreLib - Microsoft Store API client"
license = "GPL-3.0-only"

[lib]
name = "storelib_rs"
crate-type = ["cdylib", "rlib"]

[features]
default = []
wasm = ["wasm-bindgen", "js-sys", "wasm-bindgen-futures"]
ffi = []

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
roxmltree = "0.20"
uuid = { version = "1", features = ["v4", "js"] }
log = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json"] }
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
