[package]
name = "storelib_rs"
version = "0.1.11"
edition = "2021"
description = "Rust port of StoreLib - Microsoft Store API client"
license = "GPL-3.0-only"
repository = "https://github.com/query-store-links/storelib_rs"
readme = "README.md"

[lib]
name = "storelib_rs"
crate-type = ["cdylib", "rlib"]

[features]
default = []
wasm = [
    "wasm-bindgen",
    "js-sys",
    "wasm-bindgen-futures",
    "serde-wasm-bindgen",
    "console_error_panic_hook",
]
ffi = []

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
roxmltree = "0.20"
uuid = { version = "1", features = ["v4", "js"] }
log = "0.4"
event-listener = "5"
futures-util = { version = "0.3", default-features = false, features = ["std"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
indicatif = "0.17"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
wiremock = "0.6"

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json"] }
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
gloo-timers = { version = "0.3", features = ["futures"] }
